--- a/Render_Orderbook.html
+++ b/Render_Orderbook.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
 
     <link href="style.css" rel="stylesheet" />
-    <script src="OrderBookFormatting.min.js"></script>
+    <script src="OrderBookFormatting.js"></script>
 
     <title>Render Orderbook?</title>
     <style>
